update api and add postman collection
