# wazo_confd_billing/billing/model.py
@@ -15,6 +15,7 @@ from sqlalchemy.dialects.postgresql import ARRAY
 from xivo_dao.alchemy import enum
 from xivo_dao.helpers.db_manager import Base, UUIDAsString
 
+
 from ..db import Base
 
 
@@ -28,11 +29,8 @@ class RatingModel(Base):
     national = Column(String(128), nullable=True)
     mobile = Column(String(128), nullable=True)
     international = Column(String(128), nullable=True)
-    cost = Column(String(128), nullable=True)
     currency = Column(String(128), nullable=True)
     free = Column(String(128), nullable=True)
-    timestamp = Column(String(50), nullable=True)
-    reserved = Column(String(50), nullable=True)
 
     __table_args__ = (
         PrimaryKeyConstraint('id'),
